Add upcoming events with dates list

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
         "mrmlnc.vscode-scss",
         "streetsidesoftware.code-spell-checker-spanish",
         "svelte.svelte-vscode",
-        "ardenivanov.svelte-intellisense"
+        "ardenivanov.svelte-intellisense",
+        "dbaeumer.vscode-eslint"
     ]
 }
