--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
-		"eslint": "^9.0.0",
+		"eslint": "^9.9.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-perfectionist": "^3.1.3",
+		"eslint-plugin-perfectionist": "^3.6.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"eslint-plugin-unused-imports": "^4.1.4",
 		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
@@ -33,6 +34,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltestrap/sveltestrap": "^6.2.7",
-		"bootstrap": "^5.3.3"
+		"bootstrap": "^5.3.3",
+		"swiper": "^11.1.9"
 	}
 }
