--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^9.6.0",
-		"eslint": "^9.9.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-perfectionist": "^3.6.0",
-		"eslint-plugin-svelte": "^2.36.0",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.17.1",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@types/eslint": "^9.6.1",
+		"eslint": "^9.19.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-perfectionist": "^4.8.0",
+		"eslint-plugin-svelte": "^2.46.1",
 		"eslint-plugin-unused-imports": "^4.1.4",
-		"globals": "^15.0.0",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"sass": "1.77.6",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3"
+		"globals": "^15.14.0",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"sass": "1.83.4",
+		"svelte": "^4.2.19",
+		"svelte-check": "^3.8.6",
+		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.23.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fortawesome/free-brands-svg-icons": "^6.6.0",
-		"@fortawesome/free-solid-svg-icons": "^6.6.0",
-		"@sveltestrap/sveltestrap": "^6.2.7",
+		"@fortawesome/free-brands-svg-icons": "^6.7.2",
+		"@fortawesome/free-solid-svg-icons": "^6.7.2",
+		"@sveltestrap/sveltestrap": "^7.1.0",
 		"bootstrap": "^5.3.3",
 		"svelte-fa": "^4.0.3",
-		"swiper": "^11.1.9"
+		"swiper": "^11.2.2",
+		"vite": "^5.4.14"
 	}
 }
