feat: add no-content placeholder to events page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,10 +15,12 @@
 	"eslint.validate": [
 		"svelte"
 	],
+	"cSpell.language": "en,es",
 	"cSpell.words": [
 		"autohide",
 		"coverflow",
 		"scopable",
+		"sveltestrap",
 		"swiper",
 		"whatsapp",
 		"WHATSAPP"
