--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,22 @@
 {
 	"editor.formatOnSave": true,
+	"editor.insertSpaces": false,
+	"editor.detectIndentation": false,
 	"files.eol": "\n",
 	"files.insertFinalNewline": true,
 	"svelte.enable-ts-plugin": true,
 	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": "explicit"
+		"source.fixAll.eslint": "explicit",
+		"source.organizeImports": "explicit"
 	},
 	"[typescript]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"[svelte]": {
 		"editor.defaultFormatter": "svelte.svelte-vscode"
+	},
+	"[scss]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"eslint.validate": [
 		"svelte"
